[package]
name = "sexpr"
version = "0.7.0"
authors = ["Zephyr Pellerin <zv@nxvr.org>"]
license = "MIT/Apache-2.0"
description = "Multi-format S-expression serialization/deserialization support"
repository = "https://github.com/zv/sexpr"
keywords = ["sexp","s-exp","sexpr","smtlib"]
categories = ["encoding"]
readme = "README.org"
documentation = "https://zv.github.io/rust/sexpr"
edition = "2018"

[dependencies]
serde = "1.0"
num-traits = "0.2"
itoa = "0.4"
dtoa = "0.4"
proc-macro-hack = "0.5.4"
sexpr-macros = { path = "sexpr-macros" }

[dev-dependencies]
serde_bytes = "0.10"
serde_derive = "1.0"

[workspace]
members = ["sexpr-macros"]
